everything but background

--- a/index.html
+++ b/index.html
@@ -545,8 +545,8 @@
 											</h2>
 											<h3>Get estimated rates and monthly payments on an Arivo auto loan.</h3>
 
-											<iframe src="https://www.chase.com/content/chase-ux/en/structured/module/direct-to-dealer/primary-tool-liquid" data-src="https://www.chase.com/content/chase-ux/en/structured/module/direct-to-dealer/primary-tool-liquid"
-											  scrolling="yes" data-loader="#loader-loan-calc" data-fallback="#no-loan-calc" style="display: inline;"></iframe>
+											<!-- <iframe href="https://www.chase.com/content/chase-ux/en/structured/module/direct-to-dealer/primary-tool-liquid" data-src="https://www.chase.com/content/chase-ux/en/structured/module/direct-to-dealer/primary-tool-liquid"
+											  scrolling="yes" data-loader="#loader-loan-calc" data-fallback="#no-loan-calc" style="display: inline;"></iframe> -->
 											<p id="loader-loan-calc" class="iframe-loader" style="display: none;">Loading...</p>
 											<p id="no-loan-calc" class="iframe-fallback">The auto loan rates calculator is currently unavailable.</p>
 										</div>
@@ -556,8 +556,8 @@
 											<h3>Our calculator helps you estimate your monthly payment and total interest paid over the life of your loan. Input
 												your loan information and calculate.</h3>
 
-											<iframe src="https://www.chase.com/content/chase-ux/en/structured/module/direct-to-dealer/payment_calculator_liquid" data-src="https://www.chase.com/content/chase-ux/en/structured/module/direct-to-dealer/payment_calculator_liquid"
-											  scrolling="yes" data-loader="#loader-pmt-calc" data-fallback="#no-pmt-calc" style="display: inline;"></iframe>
+											<!-- <iframe href="https://www.chase.com/content/chase-ux/en/structured/module/direct-to-dealer/payment_calculator_liquid" data-src="https://www.chase.com/content/chase-ux/en/structured/module/direct-to-dealer/payment_calculator_liquid"
+											  scrolling="yes" data-loader="#loader-pmt-calc" data-fallback="#no-pmt-calc" style="display: inline;"></iframe> -->
 											<p id="loader-pmt-calc" class="iframe-loader" style="display: none;">Loading...</p>
 											<p id="no-pmt-calc" class="iframe-fallback">The loan payments calculator is currently unavailable.</p>
 										</div>
