got font-v3 working, on to backgrounds

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<link id="Fonts" type="text/css" rel="stylesheet" href="https://cdn.f9client.com/api3/file/1250003/default/font-v3.css?__gda__=exp=1523565842~acl=/api3/file/1250003/default/font-v3.css*~hmac=06cc2d3e216bb2291e3f9aa712e42dbaad6722205d902d4313236457bad426e5">
+			<link rel="stylesheet" href="style.css">
+			<link rel="stylesheet" href="UI.css"> <!-- made up name-->
+			<script src="jquery.js"></script><!-- made up name-->
+			<script src="jquery.ui.js"></script><!-- made up name-->
+			<script src="script.js"></script>
+
+	<link id="Fonts" type="text/css" rel="stylesheet" href="arivo/assets/css/font-v3.css">
 	
 	<!-- FONTAWESOME -->
 	<script defer href="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
