backgrounds working, trying to integrate local style.min.css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 	  crossorigin="anonymous"></script>
 
 	<!-- ASPX -->
-	<link href="https://autofinance.chase.com/R-CAF/css/style.aspx?lp=1250003" rel="stylesheet" type="text/css">
+	<link id="backgrounds" type="text/css" rel="stylesheet" href="arivo/assets/css/style.aspx.css">
+
+	<!-- <link href="https://autofinance.chase.com/R-CAF/css/style.aspx?lp=1250003" rel="stylesheet" type="text/css"> -->
 
 	<!-- STYLE.MIN.CSS -->
 	<link href="https://autofinance.chase.com/R-CAF/css/style.min.css" rel="stylesheet" type="text/css">
@@ -75,7 +77,7 @@
 	<link rel="canonical" href="http://arivo.com/">
 	<meta name="description" content="Arivo Acceptance auto finance, enjoy flexible car buying and auto loan options for new and used cars. Or see if refinancing is right for you.">
 	<meta name="keywords" content="Arivo, Arivo Arceptance, auto financing, Pinpoint, auto refinance, auto loan rates, auto refinance payments, find & price a car">
-	<meta name="google-site-verification" content="LOsYgEKGisNo3mPTZ8cSjM4LQLvgNcj2OsYa6ydFRFo">
+	<!-- <meta name="google-site-verification" content="LOsYgEKGisNo3mPTZ8cSjM4LQLvgNcj2OsYa6ydFRFo"> -->
 
 
 	<noscript>
