--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<!-- <link href="https://autofinance.chase.com/R-CAF/css/style.aspx?lp=1250003" rel="stylesheet" type="text/css"> -->
 
 	<!-- STYLE.MIN.CSS -->
-	<link href="https://autofinance.chase.com/R-CAF/css/style.min.css" rel="stylesheet" type="text/css">
+	<link href="arivo/assets/css/style.min.css" rel="stylesheet" type="text/css">
 
 	<!-- FIND-CAR -->
 	<link href="https://autofinance.chase.com/R-CAF/css/find-car.min.css" rel="stylesheet" type="text/css">
@@ -970,7 +970,7 @@
 								</a>
 								<ul class="panel-collapse collapse in" id="menu-links-collapse1" role="tabpanel" aria-hidden="false">
 									<li>
-										<a href="https://autofinance.chase.com/auto-finance/home?offercode=WDXDUXXX28&referrer_id=ZJPM000021546">Auto Finance Overview</a>
+										<a href="http://arivo.com/get-approved/">Auto Finance Overview</a>
 									</li>
 									<li>
 										<a href="http://arivo.com/get-approved/">Car Buying Service</a>
