Boo Yahgit pull

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 	<link href="arivo/assets/css/style.min.css" rel="stylesheet" type="text/css">
 
 	<!-- FIND-CAR -->
-	<link href="https://autofinance.chase.com/R-CAF/css/find-car.min.css" rel="stylesheet" type="text/css">
+	<!-- <link href="https://autofinance.chase.com/R-CAF/css/find-car.min.css" rel="stylesheet" type="text/css"> -->
+	<link id="backgrounds" type="text/css" rel="stylesheet" href="arivo/assets/css/find-car.min.css">
 
 	<!-- DEFAULT -->
 	<link href="https://autofinance.chase.com/R-CAF/css/default.min.css" rel="stylesheet" type="text/css">
