--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 	  crossorigin="anonymous"></script>
 
 	<!-- ASPX -->
-	<link id="backgrounds" type="text/css" rel="stylesheet" href="arivo/assets/css/style.aspx.css">
-
+	<link rel="stylesheet" href="arivo/assets/css/style.aspx.css">
 	<!-- <link href="https://autofinance.chase.com/R-CAF/css/style.aspx?lp=1250003" rel="stylesheet" type="text/css"> -->
 
 	<!-- STYLE.MIN.CSS -->
@@ -184,7 +183,7 @@
 										<span class="service-name-text"></span>
 										<!-- <p class="tile-title">Find and price a car</p> -->
 										<a>
-											<img src="arivo/assets/images/pinWeb.png" img id="pinWeb" alt="pinPointLogo" style="height:50px; margin-top:32px; width:200px">
+											<img src="arivo/assets/images/pinpoint_icon_final_web2.png" img id="pinWeb" alt="pinPointLogo" style="height:50px; margin-top:32px; width:200px">
 										</a>
 										<span class="sr-only">Powered by Pinpoint</span>
 										</span>
