--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-			<link rel="stylesheet" href="style.css">
-			<link rel="stylesheet" href="UI.css"> <!-- made up name-->
-			<script src="jquery.js"></script><!-- made up name-->
-			<script src="jquery.ui.js"></script><!-- made up name-->
-			<script src="script.js"></script>
+
 
 	<link id="Fonts" type="text/css" rel="stylesheet" href="arivo/assets/css/font-v3.css">
 	
@@ -42,7 +38,8 @@
 
 	<!-- BOOTSTRAP -->
 	<!-- <link href="https://autofinance.chase.com/R-CAF/css/vendor/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
-	<link id="backgrounds" type="text/css" rel="stylesheet" href="arivo/assets/css/bootstrap.min.css">
+	<!-- <link id="backgrounds" type="text/css" rel="stylesheet" href="arivo/assets/css/bootstrap.min.css"> -->
+	<link id="backgrounds" type="text/css" rel="stylesheet" href="arivo/assets/css/bootstrap.css">
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -135,10 +132,10 @@
 										<div class="col-xs-2 col-sm-4 section-left">
 											<a id="menu-link" href="javascript:void(0);" class="menu-link chaseanalytics-track-link" tabindex="0" data-pt-name="hd_mm_hamburger">
 												<span class="sr-only">Show the Side Menu</span>
-												<img id="IconHamMenu" src="arivo/assets/images/ham-menu.svg" alt="Menu button" style="border-width:0px;">
+												<img id="IconHamMenu" src="arivo/assets/images/ham-menu (2).png" alt="Menu button" style="border-width:0px;">
 											</a>
 											<a id="CClampCAF_Desktop" class="logo-caf-text hidden-xs" href="http://arivo.com/get-approved/" target="_blank" title="Arivo Acceptance"
-											  tabindex="0">ARIVO ACCEPTANCE</a>
+											  tabindex="0">Arivo Acceptance</a>
 										</div>
 
 										<div class="col-xs-8 col-sm-4 no-padding section-center">
@@ -183,7 +180,7 @@
 										<span class="service-name-text"></span>
 										<!-- <p class="tile-title">Find and price a car</p> -->
 										<a>
-											<img src="arivo/assets/images/pinpoint_icon_final_web2.png" img id="pinWeb" alt="pinPointLogo" style="height:50px; margin-top:32px; width:200px">
+											<img src="arivo/assets/images/pinWebMod.png" img id="pinWeb" alt="pinPointLogo" style="height:41px; margin-top:32px; width:160px">
 										</a>
 										<span class="sr-only">Powered by Pinpoint</span>
 										</span>
