--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 													<div class="find-car-footnote col-sm-12 col-xs-12">
 														<span class="glyph-weblink"></span> Arivo's website terms, privacy and security policies don’t apply to the site you're about to visit.
 														Please review its website terms, privacy and security policies to see how they apply to you. The Arivo Car
-														Buying Service is provided by TrueCar.
+														Buying Service is provided by PinPoint.
 													</div>
 
 												</div>
@@ -615,7 +615,7 @@
 						<div class="clearfix">
 							<div class="title container">
 
-								<h2>Arivo Acceptance provides auto financing and leasing.</h2>
+								<h2>Arivo Acceptance provides auto financing and leasing</h2>
 
 							</div>
 							<div class="offer-image bkgd-image">
