--- a/index.html
+++ b/index.html
@@ -1053,42 +1053,42 @@
 								<a href="https://locator.chase.com/?LOC=en_US" target="_blank" class="chaseanalytics-track-link" data-track="menu_atm_branch">Find ATM & Branch</a>
 							</li>
 							<li>
-								<a href="https://www.chase.com/resources/customer-service" target="_blank" class="chaseanalytics-track-link" data-track="menu_contact">Contact Us</a>
+								<a href="http://arivo.com/contact-us/" target="_blank" class="chaseanalytics-track-link" data-track="menu_contact">Contact Us</a>
 							</li>
 							<li>
-								<a href="https://secure.opinionlab.com/ccc01/comment_card_d.asp?referer=https://autofinance.chase.com/auto-finance/home&currentURL=https://autofinance.chase.com/auto-finance/home"
+								<a href="http://arivo.com/contact-us/"
 								  data-remote="false" class="popup-custom chaseanalytics-opt-exlnk give-feedback-menu" target="_blank" data-track="menu_feedback">Give Feedback</a>
 							</li>
 						</ul>
 					</li>
 					<li>
-						<a href="https://www.chase.com/resources/about-chase" target="_blank" class="chaseanalytics-track-link footer-section-link"
+						<a href="http://arivo.com/about/" target="_blank" class="chaseanalytics-track-link footer-section-link"
 						  data-track="menu_about">About Arivo</a>
 					</li>
-					<li>
+					<!-- <li>
 						<a href="https://www.jpmorgan.com/country/US/en/jpmorgan" target="_blank" class="chaseanalytics-track-link footer-section-link"
 						  data-track="menu_jpm">J.P. Morgan</a>
 					</li>
 					<li>
 						<a href="https://www.jpmorganchase.com/" target="_blank" class="chaseanalytics-track-link footer-section-link" data-track="menu_jpmc_co">JPMorgan Arivo & Co.</a>
-					</li>
+					</li> -->
 					<li>
 						<a href="https://www.careersatchase.com/" target="_blank" class="chaseanalytics-track-link footer-section-link" data-track="menu_careers">Careers</a>
 					</li>
-					<li>
+					<!-- <li>
 						<a href="https://www.chase.com/online/canada/canada-home-en.htm" target="_blank" class="chaseanalytics-track-link footer-section-link"
 						  data-track="menu_chase_ca">Chase Canada</a>
-					</li>
+					</li> -->
 					<li>
 						<a href="https://www.chase.com/online/services/understand-products-avoid-fees.htm" target="_blank" class="chaseanalytics-track-link footer-section-link"
 						  data-track="menu_clear_simple">Clear and Simple</a>
 					</li>
 					<li>
-						<a href="https://www.chase.com/mortgage/loan-originator-search" target="_blank" class="chaseanalytics-track-link footer-section-link"
+						<!-- <a href="https://www.chase.com/mortgage/loan-originator-search" target="_blank" class="chaseanalytics-track-link footer-section-link"
 						  data-track="menu_safe_act">SAFE Act: Arivo Mortgage Loan Originators</a>
-					</li>
+					</li> -->
 					<li>
-						<a href="https://www.chase.com/personal/mortgage/fair-lending/fair-lending-overview" target="_blank" class="chaseanalytics-track-link footer-section-link"
+						<a href="http://arivo.com/contact-us/" target="_blank" class="chaseanalytics-track-link footer-section-link"
 						  data-track="menu_fair_lending">Fair Lending</a>
 					</li>
 
