--- a/index.html
+++ b/index.html
@@ -1080,8 +1080,8 @@
 						  data-track="menu_chase_ca">Chase Canada</a>
 					</li> -->
 					<li>
-						<a href="https://www.chase.com/online/services/understand-products-avoid-fees.htm" target="_blank" class="chaseanalytics-track-link footer-section-link"
-						  data-track="menu_clear_simple">Clear and Simple</a>
+						<a href="http://pinpoint.arivo.com/" target="_blank" class="chaseanalytics-track-link footer-section-link"
+						  data-track="menu_clear_simple">PinPoint</a>
 					</li>
 					<li>
 						<!-- <a href="https://www.chase.com/mortgage/loan-originator-search" target="_blank" class="chaseanalytics-track-link footer-section-link"
