--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
 							<li class="sub-nav-item">
 								<hr>
-								<a id="HorizontalMenuLinkMobile_2" href="https://autofinance.chase.com/auto-finance/car-buying-service?offercode=WDXDUXXX28&referrer_id=ZJPM000021546"
+								<a id="HorizontalMenuLinkMobile_2" href="http://arivo.com/get-approved/"
 								  class="chaseanalytics-track-link glyph-buying-service js-menu-cbs">
 									<span class="menu-item-text">Car Buying Service</span>
 									<span class="glyph-down-arrow"></span>
@@ -345,7 +345,7 @@
 
 							<li class="sub-nav-item">
 								<hr>
-								<a id="HorizontalMenuLinkMobile_3" href="https://autofinance.chase.com/auto-finance/auto-loans?offercode=WDXDUXXX28&referrer_id=ZJPM000021546"
+								<a id="HorizontalMenuLinkMobile_3" href="http://arivo.com/get-approved/"
 								  class="chaseanalytics-track-link glyph-loans js-menu-loan">
 									<span class="menu-item-text">Auto Loans</span>
 									<span class="glyph-down-arrow"></span>
@@ -354,7 +354,7 @@
 
 							<li class="sub-nav-item">
 								<hr>
-								<a id="HorizontalMenuLinkMobile_4" href="https://autofinance.chase.com/auto-finance/auto-refinance?offercode=WDXDUXXX28&referrer_id=ZJPM000021546"
+								<a id="HorizontalMenuLinkMobile_4" href="http://arivo.com/get-approved/"
 								  class="chaseanalytics-track-link glyph-finance js-menu-refi">
 									<span class="menu-item-text">Auto Refinance</span>
 									<span class="glyph-down-arrow"></span>
@@ -363,7 +363,7 @@
 
 							<li class="sub-nav-item">
 								<hr>
-								<a id="HorizontalMenuLinkMobile_5" href="https://autofinance.chase.com/auto-finance/drivers-seat?offercode=WDXDUXXX28&referrer_id=ZJPM000021546"
+								<a id="HorizontalMenuLinkMobile_5" href="http://arivo.com/contact-us/"
 								  class="chaseanalytics-track-link glyph-learning-hub js-menu-tips">
 									<span class="menu-item-text">Get Advice</span>
 									<span class="glyph-down-arrow"></span>
