--- a/index.html
+++ b/index.html
@@ -711,21 +711,21 @@
 							<span class="sr-only"> Opens Overlay </span>
 						</a>
 
-						<a id="FooterNav_Twitter" data-track="footer_twitter" href="https://twitter.com/Chase" data-pt-name="twitter" data-remote="false"
+						<a id="FooterNav_Twitter" data-track="footer_twitter" href="https://twitter.com/Arivo" data-pt-name="twitter" data-remote="false"
 						  data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
 						  tabindex="0" aria-hidden="false">
 							<img src="https://autofinance.chase.com/R-CAF/1250003/images/twitter.svg" alt="Twitter icon" style="border-width:0px;">
 							<span class="sr-only"> Opens Overlay </span>
 						</a>
 
-						<a id="FooterNav_YouTube" data-track="footer_youtube" href="https://www.youtube.com/chase" data-pt-name="youtube" data-remote="false"
+						<a id="FooterNav_YouTube" data-track="footer_youtube" href="https://www.youtube.com/arivo" data-pt-name="youtube" data-remote="false"
 						  data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
 						  tabindex="0" aria-hidden="false">
 							<img src="https://autofinance.chase.com/R-CAF/1250003/images/youtube.svg" alt="YouTube icon" style="border-width:0px;">
 							<span class="sr-only"> Opens Overlay </span>
 						</a>
 
-						<a id="FooterNav_Pinterest" data-track="footer_pinterest" href="https://www.pinterest.com/chase/" data-pt-name="pinterest"
+						<a id="FooterNav_Pinterest" data-track="footer_pinterest" href="https://www.pinterest.com/arivo/" data-pt-name="pinterest"
 						  data-remote="false" data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
 						  tabindex="0" aria-hidden="false">
 							<img src="https://autofinance.chase.com/R-CAF/1250003/images/pinterest.svg" alt="Pinterest icon" style="border-width:0px;">
@@ -772,7 +772,7 @@
 							<h2>Auto Loans</h2>
 							<p>
 								Get approved for your next
-								<a id="FooterNav_AutoLoans" href="https://autofinance.chase.com/auto-finance/auto-loans?offercode=WDXDUXXX28&referrer_id=ZJPM000021546">auto loan</a>, head to the dealer for the test drive and shop with confidence. Use the
+								<a id="FooterNav_AutoLoans" href="http://arivo.com/get-approved/">auto loan</a>, head to the dealer for the test drive and shop with confidence. Use the
 								<a id="FooterNav_AutoLoansCalc" href="https://autofinance.chase.com/auto-finance/auto-loans/rates-calculator?offercode=WDXDUXXX28&referrer_id=ZJPM000021546">auto loan calculator</a>
 								for estimated rates and payments.
 							</p>
