--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 										<div class="col-xs-8 col-sm-4 no-padding section-center">
 											<a id="Arivo" href="http://arivo.com/" target="_blank" title="Arivo logo">
-												<img src="arivo/assets/images/arivoWhiteTransparent2.png" alt="Arivo" style="height:70px; width:auto; ">
+												<img src="arivo/assets/images/arivoWhiteTransparent2.png" alt="Arivo" style="height:60px; width:auto; ">
 												<!-- <div class="col-xs-8 col-sm-4 no-padding section-center">
 											<a id="CClampCAF_Mobile" class="logo-caf-text visible-xs" data-track="chase_logo" href="http://arivo.com/"
 											  title="Chase Auto Finance logo" tabindex="0">ARIVO ACCEPTANCE</a>
@@ -167,7 +167,7 @@
 				</div>
 
 				<div id="masthead-eyebrow">
-					<p>With Arivo Acceptance, now you're going places!</p>
+					<p>Arivo Acceptance, now you're going places</p>
 					<div class="clearfix"></div>
 				</div>
 				<div id="masthead">
@@ -826,20 +826,20 @@
 									<a id="FooterNav_EnterpriseAutoFinance" data-track="footer_service_eaf" href="https://pinpoint.arivo.com/signin" target="_blank">PinPoint</a>
 								</li>
 								<li>
-									<a id="FooterNav_JFG" data-track="footer_service_jfg" href="https://www.jaguarusa.com/index.html" target="_blank">Jaguar Financial Group</a>
+									<a id="FooterNav_JFG" data-track="footer_service_jfg" href="https://www.jaguarusa.com/index.html" target="_blank">Jaguar USA</a>
 								</li>
 								<li>
-									<a id="FooterNav_LRFG" data-track="footer_service_lrfg" href="https://www.landroverusa.com/index.html" target="_blank">Land Rover Financial Group</a>
+									<a id="FooterNav_LRFG" data-track="footer_service_lrfg" href="https://www.landroverusa.com/index.html" target="_blank">Land Rover </a>
 								</li>
 								<li>
 									<a id="FooterNav_MaseratiCapitalUSA" data-track="footer_service_mcu" href="https://www.maserati.com/maserati/international/en"
-									  target="_blank">Maserati Capital USA</a>
+									  target="_blank">Maserati USA</a>
 								</li>
 								<li>
-									<a id="FooterNav_MazdaCapital" data-track="footer_service_mcs" href="https://www.mazdausa.com/" target="_blank">Mazda Capital Services</a>
+									<a id="FooterNav_MazdaCapital" data-track="footer_service_mcs" href="https://www.mazdausa.com/" target="_blank">Mazda  Services</a>
 								</li>
 								<li>
-									<a id="FooterNav_SubaruMotorsFinance" data-track="footer_service_smf" href="https://www.subaru.com/index.html" target="_blank">Subaru Motors Finance</a>
+									<a id="FooterNav_SubaruMotorsFinance" data-track="footer_service_smf" href="https://www.subaru.com/index.html" target="_blank">Subaru Motors America</a>
 								</li>
 							</ul>
 						</div>
