--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 	<link id="Fonts" type="text/css" rel="stylesheet" href="arivo/assets/css/font-v3.css">
-	
+
 	<!-- FONTAWESOME -->
 	<script defer href="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
 	  crossorigin="anonymous"></script>
@@ -140,7 +140,7 @@
 
 										<div class="col-xs-8 col-sm-4 no-padding section-center">
 											<a id="Arivo" href="http://arivo.com/" target="_blank" title="Arivo logo">
-												<img src="arivo/assets/images/arivoWhiteTransparent2.png" alt="Arivo" style="height:60px; width:auto; ">
+												<img src="arivo/assets/images/arivoWhiteTransparent2.png" alt="Arivo" style="height:60px; width:auto; margin-top: 4px;">
 												<!-- <div class="col-xs-8 col-sm-4 no-padding section-center">
 											<a id="CClampCAF_Mobile" class="logo-caf-text visible-xs" data-track="chase_logo" href="http://arivo.com/"
 											  title="Chase Auto Finance logo" tabindex="0">ARIVO ACCEPTANCE</a>
@@ -336,8 +336,7 @@
 
 							<li class="sub-nav-item">
 								<hr>
-								<a id="HorizontalMenuLinkMobile_2" href="http://arivo.com/get-approved/"
-								  class="chaseanalytics-track-link glyph-buying-service js-menu-cbs">
+								<a id="HorizontalMenuLinkMobile_2" href="http://arivo.com/get-approved/" class="chaseanalytics-track-link glyph-buying-service js-menu-cbs">
 									<span class="menu-item-text">Car Buying Service</span>
 									<span class="glyph-down-arrow"></span>
 								</a>
@@ -345,8 +344,7 @@
 
 							<li class="sub-nav-item">
 								<hr>
-								<a id="HorizontalMenuLinkMobile_3" href="http://arivo.com/get-approved/"
-								  class="chaseanalytics-track-link glyph-loans js-menu-loan">
+								<a id="HorizontalMenuLinkMobile_3" href="http://arivo.com/get-approved/" class="chaseanalytics-track-link glyph-loans js-menu-loan">
 									<span class="menu-item-text">Auto Loans</span>
 									<span class="glyph-down-arrow"></span>
 								</a>
@@ -354,8 +352,7 @@
 
 							<li class="sub-nav-item">
 								<hr>
-								<a id="HorizontalMenuLinkMobile_4" href="http://arivo.com/get-approved/"
-								  class="chaseanalytics-track-link glyph-finance js-menu-refi">
+								<a id="HorizontalMenuLinkMobile_4" href="http://arivo.com/get-approved/" class="chaseanalytics-track-link glyph-finance js-menu-refi">
 									<span class="menu-item-text">Auto Refinance</span>
 									<span class="glyph-down-arrow"></span>
 								</a>
@@ -363,8 +360,7 @@
 
 							<li class="sub-nav-item">
 								<hr>
-								<a id="HorizontalMenuLinkMobile_5" href="http://arivo.com/contact-us/"
-								  class="chaseanalytics-track-link glyph-learning-hub js-menu-tips">
+								<a id="HorizontalMenuLinkMobile_5" href="http://arivo.com/contact-us/" class="chaseanalytics-track-link glyph-learning-hub js-menu-tips">
 									<span class="menu-item-text">Get Advice</span>
 									<span class="glyph-down-arrow"></span>
 								</a>
@@ -693,52 +689,58 @@
 		<footer class="footer" data-module="footer">
 			<div class="top-section">
 				<div class="container">
-					<div class="col-xs-12 col-md-3 section-one">
-						<a id="FooterNav_CAFMain" href="http://arivo.com/get-approved/">ARIVO AUTO FINANCE</a>
-					</div>
-					<div class="col-xs-12  col-md-offset-1 col-md-5 section-two">
-						<span class="social-header pull-left">Follow us:</span>
-						<a id="FooterNav_Facebook" data-track="footer_facebook" href="https://www.facebook.com/arivo.acceptance.50" data-pt-name="facebook"
-						  data-remote="false" data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
-						  tabindex="0" aria-hidden="false">
-							<img src="https://autofinance.chase.com/R-CAF/1250003/images/facebook.svg" alt="Facebook icon" style="border-width:0px;">
-							<span class="sr-only"> Opens Overlay </span>
-						</a>
-						<a id="FooterNav_Instagram" data-track="footer_instagram" href="https://www.instagram.com/arivoacceptance/" data-pt-name="instagram"
-						  data-remote="false" data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
-						  tabindex="0" aria-hidden="false">
-							<img src="https://autofinance.chase.com/R-CAF/1250003/images/instagram.svg" alt="Instagram icon" style="border-width:0px;">
-							<span class="sr-only"> Opens Overlay </span>
-						</a>
-
-						<a id="FooterNav_Twitter" data-track="footer_twitter" href="https://twitter.com/Arivo" data-pt-name="twitter" data-remote="false"
-						  data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
-						  tabindex="0" aria-hidden="false">
-							<img src="https://autofinance.chase.com/R-CAF/1250003/images/twitter.svg" alt="Twitter icon" style="border-width:0px;">
-							<span class="sr-only"> Opens Overlay </span>
-						</a>
-
-						<a id="FooterNav_YouTube" data-track="footer_youtube" href="https://www.youtube.com/arivo" data-pt-name="youtube" data-remote="false"
-						  data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
-						  tabindex="0" aria-hidden="false">
-							<img src="https://autofinance.chase.com/R-CAF/1250003/images/youtube.svg" alt="YouTube icon" style="border-width:0px;">
-							<span class="sr-only"> Opens Overlay </span>
-						</a>
-
-						<a id="FooterNav_Pinterest" data-track="footer_pinterest" href="https://www.pinterest.com/arivo/" data-pt-name="pinterest"
-						  data-remote="false" data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
-						  tabindex="0" aria-hidden="false">
-							<img src="https://autofinance.chase.com/R-CAF/1250003/images/pinterest.svg" alt="Pinterest icon" style="border-width:0px;">
-							<span class="sr-only"> Opens Overlay </span>
-						</a>
-
-						<a id="FooterNav_Linkedin" data-track="footer_linkedin" href="https://www.linkedin.com/company/arivo-acceptance/" data-pt-name="linkedin"
-						  data-remote="false" data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
-						  tabindex="0" aria-hidden="false">
-							<img src="https://autofinance.chase.com/R-CAF/1250003/images/linkedin.svg" alt="Linkedin icon" style="height:24px;width:24px;border-width:0px;">
-							<span class="sr-only"> Opens Overlay </span>
+					<!-- <div class="col-xs-8 col-sm-4 no-padding section-center">
+								<a id="Arivo" href="http://arivo.com/" target="_blank" title="Arivo logo">
+									<img src="arivo/assets/images/arivoWhiteTransparent2.png" alt="Arivo" style="height:60px; width:auto; "> -->
+					<div class="col-xs-12 col-md-3 section-one" style="margin-top: 20px;">
+						<a id="FooterNav_CAFMain" href="http://arivo.com/get-approved/" target="_blank" title="Arivo Acceptance">
+							<img src="arivo/assets/images/ARIVOacceptance.png" alt="Arivo" style="height:60px; width:auto; margin-top: 0px;">
 						</a>
 					</div>
+					<a id="FooterNav_CAFMain" href="http://arivo.com/get-approved/" target="_blank" title="Arivo Acceptance">
+						<div class="col-xs-12  col-md-offset-1 col-md-5 section-two" style="margin-top: 36px;">
+							<span class="social-header pull-left">Follow us:</span>
+							<a id="FooterNav_Facebook" data-track="footer_facebook" href="https://www.facebook.com/arivo.acceptance.50" data-pt-name="facebook"
+							  data-remote="false" data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
+							  tabindex="0" aria-hidden="false">
+								<img src="https://autofinance.chase.com/R-CAF/1250003/images/facebook.svg" alt="Facebook icon" style="border-width:0px;">
+								<span class="sr-only"> Opens Overlay </span>
+							</a>
+							<a id="FooterNav_Instagram" data-track="footer_instagram" href="https://www.instagram.com/arivoacceptance/" data-pt-name="instagram"
+							  data-remote="false" data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
+							  tabindex="0" aria-hidden="false">
+								<img src="https://autofinance.chase.com/R-CAF/1250003/images/instagram.svg" alt="Instagram icon" style="border-width:0px;">
+								<span class="sr-only"> Opens Overlay </span>
+							</a>
+
+							<a id="FooterNav_Twitter" data-track="footer_twitter" href="https://twitter.com/Arivo" data-pt-name="twitter" data-remote="false"
+							  data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
+							  tabindex="0" aria-hidden="false">
+								<img src="https://autofinance.chase.com/R-CAF/1250003/images/twitter.svg" alt="Twitter icon" style="border-width:0px;">
+								<span class="sr-only"> Opens Overlay </span>
+							</a>
+
+							<a id="FooterNav_YouTube" data-track="footer_youtube" href="https://www.youtube.com/arivo" data-pt-name="youtube" data-remote="false"
+							  data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
+							  tabindex="0" aria-hidden="false">
+								<img src="https://autofinance.chase.com/R-CAF/1250003/images/youtube.svg" alt="YouTube icon" style="border-width:0px;">
+								<span class="sr-only"> Opens Overlay </span>
+							</a>
+
+							<a id="FooterNav_Pinterest" data-track="footer_pinterest" href="https://www.pinterest.com/arivo/" data-pt-name="pinterest"
+							  data-remote="false" data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
+							  tabindex="0" aria-hidden="false">
+								<img src="https://autofinance.chase.com/R-CAF/1250003/images/pinterest.svg" alt="Pinterest icon" style="border-width:0px;">
+								<span class="sr-only"> Opens Overlay </span>
+							</a>
+
+							<a id="FooterNav_Linkedin" data-track="footer_linkedin" href="https://www.linkedin.com/company/arivo-acceptance/" data-pt-name="linkedin"
+							  data-remote="false" data-target="#ThirdPartyPopUp" data-toggle="modal" class="weblinkingPopup chaseanalytics-opt-exlnk col-xs-2 text-center"
+							  tabindex="0" aria-hidden="false">
+								<img src="https://autofinance.chase.com/R-CAF/1250003/images/linkedin.svg" alt="Linkedin icon" style="height:24px;width:24px;border-width:0px;">
+								<span class="sr-only"> Opens Overlay </span>
+							</a>
+						</div>
 				</div>
 			</div>
 			<div class="content-section">
@@ -836,7 +838,7 @@
 									  target="_blank">Maserati USA</a>
 								</li>
 								<li>
-									<a id="FooterNav_MazdaCapital" data-track="footer_service_mcs" href="https://www.mazdausa.com/" target="_blank">Mazda  Services</a>
+									<a id="FooterNav_MazdaCapital" data-track="footer_service_mcs" href="https://www.mazdausa.com/" target="_blank">Mazda Services</a>
 								</li>
 								<li>
 									<a id="FooterNav_SubaruMotorsFinance" data-track="footer_service_smf" href="https://www.subaru.com/index.html" target="_blank">Subaru Motors America</a>
@@ -1056,14 +1058,13 @@
 								<a href="http://arivo.com/contact-us/" target="_blank" class="chaseanalytics-track-link" data-track="menu_contact">Contact Us</a>
 							</li>
 							<li>
-								<a href="http://arivo.com/contact-us/"
-								  data-remote="false" class="popup-custom chaseanalytics-opt-exlnk give-feedback-menu" target="_blank" data-track="menu_feedback">Give Feedback</a>
+								<a href="http://arivo.com/contact-us/" data-remote="false" class="popup-custom chaseanalytics-opt-exlnk give-feedback-menu"
+								  target="_blank" data-track="menu_feedback">Give Feedback</a>
 							</li>
 						</ul>
 					</li>
 					<li>
-						<a href="http://arivo.com/about/" target="_blank" class="chaseanalytics-track-link footer-section-link"
-						  data-track="menu_about">About Arivo</a>
+						<a href="http://arivo.com/about/" target="_blank" class="chaseanalytics-track-link footer-section-link" data-track="menu_about">About Arivo</a>
 					</li>
 					<!-- <li>
 						<a href="https://www.jpmorgan.com/country/US/en/jpmorgan" target="_blank" class="chaseanalytics-track-link footer-section-link"
@@ -1080,17 +1081,15 @@
 						  data-track="menu_chase_ca">Chase Canada</a>
 					</li> -->
 					<li>
-						<a href="http://pinpoint.arivo.com/" target="_blank" class="chaseanalytics-track-link footer-section-link"
-						  data-track="menu_clear_simple">PinPoint</a>
+						<a href="http://pinpoint.arivo.com/" target="_blank" class="chaseanalytics-track-link footer-section-link" data-track="menu_clear_simple">PinPoint</a>
 					</li>
 					<li>
 						<!-- <a href="https://www.chase.com/mortgage/loan-originator-search" target="_blank" class="chaseanalytics-track-link footer-section-link"
 						  data-track="menu_safe_act">SAFE Act: Arivo Mortgage Loan Originators</a>
 					</li> -->
-					<li>
-						<a href="http://arivo.com/contact-us/" target="_blank" class="chaseanalytics-track-link footer-section-link"
-						  data-track="menu_fair_lending">Fair Lending</a>
-					</li>
+						<li>
+							<a href="http://arivo.com/contact-us/" target="_blank" class="chaseanalytics-track-link footer-section-link" data-track="menu_fair_lending">Fair Lending</a>
+						</li>
 
 				</ul>
 				<a id="close-button-bottom" tabindex="0" href="javascript:;">
